// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary with 1 expense 1`] = `
<div>
  Viewing 
  1
   
  expense
   totalling 
  $2.35
</div>
`;

exports[`should render ExpensesSummary with multiple expense 1`] = `
<div>
  Viewing 
  120
   
  expenses
   totalling 
  $2,354,564.56
</div>
`;
